log_pass - часть методов базы написал
